core/sass/atlas/pages/_landing-page.scss
@import '../tokens';

.atlas-landing__hero {
  position: relative;
  overflow: hidden;
  background: $atlas-home-bg;

  & .atlas-container {
    position: relative;
  }
}

.atlas-landing__hero-video {
  display: block;
  top: 0;
  width: auto;
  height: 600px;
  transform: translateX(-60%);

  @media (min-width: $breakpoint-medium) {
    height: 680px;
    transform: translateX(-47%);
  }

  @media (min-width: $breakpoint-large) {
    height: 780px;
    transform: translateX(-50%);
  }
}


.atlas-landing__heading {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  min-height: 488px;
  max-width: 445px;
  padding: 23px 0 40px;
  margin: 0 auto;
  color: $atlas-white;
  text-align: center;
  text-shadow: 0 0 4px $atlas-home-bg;

  @media (min-width: $breakpoint-medium) {
    justify-content: center;
    margin-left: 5%;
    text-align: left;
  }

  @media (min-width: $breakpoint-large) {
    min-height: 560px;
  }
}

.atlas-landing__strapline {
  font-size: 20px;
  line-height: 1.5;
  margin: 0;

  @media (min-width: $breakpoint-medium) {
    font-size: 30px;
    line-height: 1.6;
  }
}


.atlas-landing-page__section {
  padding: 33px 0 75px;
  background: $atlas-white;

  &:nth-of-type(2n + 1) {
    background: $atlas-grey-light;
  }

  &:nth-of-type(4n + 1) {
    background: $atlas-green-light;
  }

  @media (min-width: $breakpoint-medium) {
    padding-top: 48px;
  }

  @media (min-width: $breakpoint-large) {
    padding: 80px 0 100px;
  }
}

.atlas-landing-page__quote {
  position: relative;
  margin-bottom: 50px;
  margin-left: 40px;

  @media (min-width: $breakpoint-large) {
    margin-left: 0;
  }

  &:before {
    content: '';
    position: absolute;
    left: -40px;
    display: block;
    width: 10px;
    height: 100%;
    background: $atlas-brand-red;
  }

  p {
    margin-top: 0;
  }
}

.atlas-landing__map {
  @media (min-width: $breakpoint-medium) {
    max-width: none;
    margin-top: -138px;
  }

  @media (min-width: $breakpoint-large) {
    margin-top: -198px;
    margin-bottom: -180px;
  }
}

